fix minor alignment issue for the github link icon

--- a/static/style.css
+++ b/static/style.css
@@ -81,7 +81,7 @@ a:hover {
 
 #github a {
   position: absolute;
-  bottom: 10px;
+  bottom: 25px;
   right: 10px;
   width: 32px;
   height: 32px;
